style: 补充优化深色主题 - 完善Home/About页面和输入框样式
🎨 深色主题补充优化：

1. index.html (首页)
   - ✅ Workflow工作流程4个步骤卡片改为深色
   - ✅ Quick FAQ区域3个问答卡片改为深色
   - ✅ 统一标题和文字颜色（#e5e7eb, #aab4d4）
   - ✅ 步骤标签改为品牌色（#667eea）

2. about.html (关于页)
   - ✅ Why Choose AISTONE区域改为深色
   - ✅ 3个特色卡片统一深色背景
   - ✅ 所有文字颜色统一为浅色主题

3. style.css (全局样式)
   - ✅ textarea#text-input 主输入框改为深色
   - ✅ .negative-prompt input 负面提示词输入框改为深色
   - ✅ .image-options select/input 选项输入框改为深色
   - ✅ 所有输入框统一深色背景和边框

📝 统一配色：
- 输入框背景：#0e1424
- 输入框边框：#2a3a57
- 输入框文字：#e5e7eb
- 卡片背景：#0e1424
- 卡片边框：#2a3a57
- 标题文字：#e5e7eb
- 正文文字：#aab4d4
- 品牌色：#667eea

🎯 优化效果：
- ✅ 图片生成器输入框深色主题
- ✅ Home页面所有白色卡片已改为深色
- ✅ About页面所有白色区域已改为深色
- ✅ 全站深色主题完全统一
- ✅ 用户输入体验一致性提升

💡 用户体验提升：
- 输入框在深色背景下更协调
- 减少视觉跳跃感
- 全站配色完全统一
- 夜间使用更舒适

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -167,25 +167,25 @@
         </section>
 
         <!-- 为什么选择我们 -->
-        <section class="why-choose-section" style="margin-bottom: 60px; background: #f8f9fa; padding: 60px 40px; border-radius: 16px">
-          <h2 style="text-align: center; margin-bottom: 40px; font-size: 2.2em; color: #333" data-i18n="aboutWhyChooseTitle">
+        <section class="why-choose-section" style="margin-bottom: 60px; background: #0e1424; border: 1px solid #2a3a57; padding: 60px 40px; border-radius: 16px">
+          <h2 style="text-align: center; margin-bottom: 40px; font-size: 2.2em; color: #e5e7eb" data-i18n="aboutWhyChooseTitle">
             为什么选择 AISTONE
           </h2>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; max-width: 1000px; margin: 0 auto">
             <div style="text-align: center">
               <div style="font-size: 3em; margin-bottom: 10px">👥</div>
-              <h3 data-i18n="aboutWhyPoint1Title" style="font-size: 1.3em; margin-bottom: 10px; color: #333">用户优先</h3>
-              <p data-i18n="aboutWhyPoint1Desc" style="color: #666">简单易用的界面，无需专业知识即可上手</p>
+              <h3 data-i18n="aboutWhyPoint1Title" style="font-size: 1.3em; margin-bottom: 10px; color: #e5e7eb">用户优先</h3>
+              <p data-i18n="aboutWhyPoint1Desc" style="color: #aab4d4">简单易用的界面，无需专业知识即可上手</p>
             </div>
             <div style="text-align: center">
               <div style="font-size: 3em; margin-bottom: 10px">🚀</div>
-              <h3 data-i18n="aboutWhyPoint2Title" style="font-size: 1.3em; margin-bottom: 10px; color: #333">持续创新</h3>
-              <p data-i18n="aboutWhyPoint2Desc" style="color: #666">不断引入最新AI技术，保持行业领先</p>
+              <h3 data-i18n="aboutWhyPoint2Title" style="font-size: 1.3em; margin-bottom: 10px; color: #e5e7eb">持续创新</h3>
+              <p data-i18n="aboutWhyPoint2Desc" style="color: #aab4d4">不断引入最新AI技术，保持行业领先</p>
             </div>
             <div style="text-align: center">
               <div style="font-size: 3em; margin-bottom: 10px">💬</div>
-              <h3 data-i18n="aboutWhyPoint3Title" style="font-size: 1.3em; margin-bottom: 10px; color: #333">用心服务</h3>
-              <p data-i18n="aboutWhyPoint3Desc" style="color: #666">快速响应用户反馈，持续优化产品体验</p>
+              <h3 data-i18n="aboutWhyPoint3Title" style="font-size: 1.3em; margin-bottom: 10px; color: #e5e7eb">用心服务</h3>
+              <p data-i18n="aboutWhyPoint3Desc" style="color: #aab4d4">快速响应用户反馈，持续优化产品体验</p>
             </div>
           </div>
         </section>
