--- a/frontend/index.html
+++ b/frontend/index.html
@@ -577,27 +577,27 @@
             class="workflow-steps"
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 24px"
           >
-            <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep1Label">Step 1</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep1Title">Clarify requirements</h3>
+            <div class="workflow-step" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #667eea" data-i18n="homeWorkflowStep1Label">Step 1</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em; color: #e5e7eb" data-i18n="homeWorkflowStep1Title">Clarify requirements</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep1Desc">Log the target channel, aspect ratio, brand keywords, and references. Store them in the prompt notes so teammates stay aligned.</p>
             </div>
 
-            <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep2Label">Step 2</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep2Title">Pick model and parameters</h3>
+            <div class="workflow-step" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #667eea" data-i18n="homeWorkflowStep2Label">Step 2</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em; color: #e5e7eb" data-i18n="homeWorkflowStep2Title">Pick model and parameters</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep2Desc">Choose FLUX for polish, Turbo for speed, or Kontext for image-to-image. Set ratio, variation count, and negative prompts to match the channel.</p>
             </div>
 
-            <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep3Label">Step 3</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep3Title">Iterate prompts</h3>
+            <div class="workflow-step" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #667eea" data-i18n="homeWorkflowStep3Label">Step 3</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em; color: #e5e7eb" data-i18n="homeWorkflowStep3Title">Iterate prompts</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep3Desc">Generate a draft, inspect composition and lighting, then tweak keywords. Compare prompt history to lock in the strongest version.</p>
             </div>
 
-            <div class="workflow-step" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 12px; padding: 24px">
-              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #2563eb" data-i18n="homeWorkflowStep4Label">Step 4</span>
-              <h3 style="margin: 12px 0; font-size: 1.3em" data-i18n="homeWorkflowStep4Title">Export and add voice</h3>
+            <div class="workflow-step" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
+              <span style="display: inline-block; font-size: 1.1em; font-weight: 600; color: #667eea" data-i18n="homeWorkflowStep4Label">Step 4</span>
+              <h3 style="margin: 12px 0; font-size: 1.3em; color: #e5e7eb" data-i18n="homeWorkflowStep4Title">Export and add voice</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeWorkflowStep4Desc">Upscale the winning frame and export PNG or JPG. Switch to the voice page to create narration with the same script.</p>
             </div>
           </div>
@@ -617,15 +617,15 @@
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px"
           >
             <div class="faq-item" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ1">Is AISTONE completely free?</h3>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px; color: #e5e7eb" data-i18n="homeQuickFaqQ1">Is AISTONE completely free?</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeQuickFaqA1">Core features, including HD export and voice synthesis, are free for all visitors. Enterprise deployments, brand customisation, and high-volume API usage are billed separately.</p>
             </div>
             <div class="faq-item" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ2">Can I use generated assets commercially?</h3>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px; color: #e5e7eb" data-i18n="homeQuickFaqQ2">Can I use generated assets commercially?</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeQuickFaqA2">Yes. You own the assets for campaigns and ads. Please follow platform disclosure rules for AI-generated media.</p>
             </div>
             <div class="faq-item" style="background: #0e1424; border: 1px solid #2a3a57; border-radius: 12px; padding: 24px">
-              <h3 style="font-size: 1.2em; margin-bottom: 12px" data-i18n="homeQuickFaqQ3">How do I improve prompt accuracy?</h3>
+              <h3 style="font-size: 1.2em; margin-bottom: 12px; color: #e5e7eb" data-i18n="homeQuickFaqQ3">How do I improve prompt accuracy?</h3>
               <p style="color: #aab4d4; line-height: 1.6" data-i18n="homeQuickFaqA3">Combine subject, lighting, lens, and style keywords while using negative prompts to remove unwanted elements. The case study above breaks each part down.</p>
             </div>
           </div>
