--- a/frontend/about.html
+++ b/frontend/about.html
@@ -95,11 +95,19 @@
         </section>
 
         <!-- 我们的使命 -->
-        <section class="mission-section" style="margin-bottom: 60px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 60px 40px; border-radius: 16px; text-align: center">
-          <h2 data-i18n="aboutMissionTitle" style="font-size: 2.2em; margin-bottom: 20px; color: white">我们的使命</h2>
-          <p data-i18n="aboutMissionDesc" style="max-width: 800px; margin: 0 auto; font-size: 1.2em; line-height: 1.8; color: rgba(255, 255, 255, 0.95)">
-            AISTONE致力于让每个人都能轻松使用AI技术进行创作。我们相信，创意不应该被技术门槛所限制，每个人都应该拥有将想法变为现实的能力。
-          </p>
+        <section class="mission-section" style="margin-bottom: 60px; background: #0e1424; border: 2px solid #667eea; padding: 60px 40px; border-radius: 16px; text-align: center; position: relative; overflow: hidden">
+          <!-- 装饰性渐变背景 -->
+          <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%); pointer-events: none"></div>
+          <!-- 内容 -->
+          <div style="position: relative; z-index: 1">
+            <div style="display: inline-block; padding: 8px 20px; background: rgba(102, 126, 234, 0.15); border-radius: 20px; margin-bottom: 20px">
+              <span style="font-size: 1.8em">🎯</span>
+            </div>
+            <h2 data-i18n="aboutMissionTitle" style="font-size: 2.2em; margin-bottom: 20px; color: #e5e7eb; font-weight: 600">我们的使命</h2>
+            <p data-i18n="aboutMissionDesc" style="max-width: 800px; margin: 0 auto; font-size: 1.2em; line-height: 1.8; color: #aab4d4">
+              AISTONE致力于让每个人都能轻松使用AI技术进行创作。我们相信，创意不应该被技术门槛所限制，每个人都应该拥有将想法变为现实的能力。
+            </p>
+          </div>
         </section>
 
         <!-- 核心价值 -->
