--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -139,11 +139,19 @@
           </div>
 
           <!-- 响应时间说明 -->
-          <div style="text-align: center; padding: 30px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 12px; color: white">
-            <h3 data-i18n="contactResponseTitle" style="font-size: 1.5em; margin-bottom: 15px">快速响应承诺</h3>
-            <p data-i18n="contactResponseDesc" style="font-size: 1.1em; line-height: 1.6">
-              我们承诺在1-2个工作日内回复您的信息。感谢您的关注与支持！
-            </p>
+          <div style="text-align: center; padding: 40px 30px; background: #0e1424; border: 2px solid #667eea; border-radius: 12px; position: relative; overflow: hidden">
+            <!-- 装饰性渐变背景 -->
+            <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%); pointer-events: none"></div>
+            <!-- 内容 -->
+            <div style="position: relative; z-index: 1">
+              <div style="display: inline-block; padding: 8px 20px; background: rgba(102, 126, 234, 0.15); border-radius: 20px; margin-bottom: 15px">
+                <span style="font-size: 1.5em">⚡</span>
+              </div>
+              <h3 data-i18n="contactResponseTitle" style="font-size: 1.5em; margin-bottom: 15px; color: #e5e7eb; font-weight: 600">快速响应承诺</h3>
+              <p data-i18n="contactResponseDesc" style="font-size: 1.1em; line-height: 1.6; color: #aab4d4">
+                我们承诺在1-2个工作日内回复您的信息。感谢您的关注与支持！
+              </p>
+            </div>
           </div>
         </section>
       </main>
