refactor: 移除About页面冗余的Contact Us区块
🎯 内容优化：

问题描述：
- ❌ About页面底部有完整的Contact Us区块
- ❌ 网站已有专门的Contact页面
- ❌ 内容重复，显得冗余
- ❌ 增加页面长度，影响用户体验

优化方案：
- ✅ 移除About页面的Contact Us区块
- ✅ 用户可通过导航栏访问专门的Contact页面
- ✅ 减少内容重复
- ✅ 页面更简洁聚焦

📝 遵循设计原则：

1. DRY原则（Don't Repeat Yourself）
   - 避免内容重复
   - Contact信息集中在Contact页面

2. YAGNI原则（You Aren't Gonna Need It）
   - 移除不必要的重复内容
   - About页面专注于介绍公司和团队

3. 单一职责原则（SRP）
   - About页面：介绍公司使命、价值观、团队
   - Contact页面：提供联系方式和反馈渠道

🎨 附加优化：
- ✅ 修正团队介绍文字颜色为深色主题（#aab4d4）
- ✅ 保持视觉风格一致性

💡 优化效果：
- ✅ 页面内容更聚焦
- ✅ 减少信息冗余
- ✅ 用户体验更清晰
- ✅ 页面加载更快
- ✅ 维护更简单（联系信息只需在Contact页面更新）

🔗 用户路径：
- About页面 → 了解公司和团队
- Contact页面 → 获取联系方式和提交反馈

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -203,38 +203,9 @@
           <h2 style="margin-bottom: 30px; font-size: 2.2em" data-i18n="aboutTeamTitle">
             关于团队
           </h2>
-          <p data-i18n="aboutTeamDesc" style="max-width: 700px; margin: 0 auto 30px; font-size: 1.1em; line-height: 1.8; color: #666">
+          <p data-i18n="aboutTeamDesc" style="max-width: 700px; margin: 0 auto 30px; font-size: 1.1em; line-height: 1.8; color: #aab4d4">
             AISTONE由一支充满激情的技术团队打造，我们来自不同的背景，但都怀揣着让AI技术普惠大众的共同愿景。我们相信技术应该服务于人，让每个人都能享受AI带来的便利。
           </p>
-        </section>
-
-        <!-- 联系我们 -->
-        <section class="contact-section" style="margin-bottom: 60px">
-          <h2 style="text-align: center; margin-bottom: 40px; font-size: 2.2em" data-i18n="aboutContactUsTitle">
-            联系我们
-          </h2>
-          <div style="max-width: 800px; margin: 0 auto; text-align: center">
-            <p data-i18n="aboutContactDesc" style="font-size: 1.1em; line-height: 1.8; color: #666; margin-bottom: 40px">
-              如果您有任何问题、建议或合作意向，欢迎随时与我们联系。我们重视每一位用户的反馈，并将在1个工作日内回复您。
-            </p>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px">
-              <div>
-                <div style="font-size: 2.5em; margin-bottom: 10px">📧</div>
-                <h3 data-i18n="aboutContactEmailTitle" style="font-size: 1.2em; margin-bottom: 10px">邮箱</h3>
-                <a href="mailto:support@aistone.org" style="color: #667eea; text-decoration: none; font-weight: 500">support@aistone.org</a>
-              </div>
-              <div>
-                <div style="font-size: 2.5em; margin-bottom: 10px">💬</div>
-                <h3 data-i18n="aboutContactFeedbackTitle" style="font-size: 1.2em; margin-bottom: 10px">在线反馈</h3>
-                <a href="contact.html" style="color: #667eea; text-decoration: none; font-weight: 500" data-i18n="aboutContactFeedbackLink">提交反馈</a>
-              </div>
-              <div>
-                <div style="font-size: 2.5em; margin-bottom: 10px">🐦</div>
-                <h3 data-i18n="aboutContactSocialTitle" style="font-size: 1.2em; margin-bottom: 10px">社交媒体</h3>
-                <a href="https://twitter.com/aistone_ai" target="_blank" rel="noopener" style="color: #667eea; text-decoration: none; font-weight: 500">@aistone_ai</a>
-              </div>
-            </div>
-          </div>
         </section>
       </div>
     </main>
