fix: 调整面包屑导航位置 - 移到页面顶部Hero区域之前
📍 位置优化：

原位置问题：
- ❌ 面包屑导航在Hero区域之后
- ❌ 视觉上看起来在Hero深色框内
- ❌ 位置不符合Web设计最佳实践

正确位置：
- ✅ 面包屑导航在导航栏之后
- ✅ 在Hero区域之前
- ✅ 在页面标题上方
- ✅ 符合用户习惯和Web标准

📐 页面布局结构（统一）：

1. 顶部导航栏（Header）
   ↓
2. 面包屑导航（Home > 当前页面）← 正确位置
   ↓
3. Hero展示区域（标题、描述、标签）
   ↓
4. 内容创作区域（表单、输入框等）

🎯 设计理念：

1. 符合Web标准
   - 面包屑导航通常在页面顶部
   - 在主要内容之前提供位置指示

2. 用户体验优先
   - 用户进入页面首先看到位置信息
   - 便于快速了解当前位置和返回

3. 视觉层次清晰
   - 面包屑导航独立显示
   - 不与Hero区域混在一起

📝 修改内容：

Image Generator页面：
- ✅ 面包屑移到Hero之前
- ✅ 添加margin-bottom: 20px间距

Voice Synthesis页面：
- ✅ 面包屑移到Hero之前
- ✅ 保持与Image Generator一致

💡 优化效果：
- ✅ 全站面包屑位置统一
- ✅ 符合Web设计最佳实践
- ✅ 用户导航体验提升
- ✅ 视觉层次更清晰

感谢彭大大的指正！

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -166,6 +166,20 @@
   <body class="voice-page" data-page-id="voice">
     <header data-header></header>
 
+    <div class="container">
+      <!-- 面包屑导航 -->
+      <nav class="breadcrumb" id="breadcrumb-nav" aria-label="面包屑导航" style="margin-top: 20px; margin-bottom: 20px">
+        <ol class="breadcrumb-list">
+          <li class="breadcrumb-item">
+            <a href="/" class="breadcrumb-link" data-i18n="navHome">首页</a>
+          </li>
+          <li class="breadcrumb-item">
+            <span class="breadcrumb-current" data-i18n="navVoiceGen">AI语音合成</span>
+          </li>
+        </ol>
+      </nav>
+    </div>
+
     <!-- 主视觉区 -->
     <section class="hero-section" id="voice-home">
       <div class="hero-content">
@@ -196,23 +210,6 @@
 
     <div class="container">
       <main>
-        <!-- 面包屑导航 -->
-        <nav
-          class="breadcrumb"
-          id="breadcrumb-nav"
-          aria-label="面包屑导航"
-          style="margin-top: 20px"
-        >
-          <ol class="breadcrumb-list">
-            <li class="breadcrumb-item">
-              <a href="/" class="breadcrumb-link" data-i18n="navHome">首页</a>
-            </li>
-            <li class="breadcrumb-item">
-              <span class="breadcrumb-current" data-i18n="navVoiceGen">AI语音合成</span>
-            </li>
-          </ol>
-        </nav>
-
         <!-- 内容创作区域 -->
         <section class="input-section" id="create" style="margin-top: 20px">
           <h2 class="section-title" data-i18n="voiceInputTitle" style="margin-bottom: 12px">
