--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -166,6 +166,20 @@
   <body data-page-id="image">
     <header data-header></header>
 
+    <div class="container">
+      <!-- 面包屑导航 -->
+      <nav class="breadcrumb" id="breadcrumb-nav" aria-label="面包屑导航" style="margin-top: 20px; margin-bottom: 20px">
+        <ol class="breadcrumb-list">
+          <li class="breadcrumb-item">
+            <a href="/" class="breadcrumb-link" data-i18n="navHome">首页</a>
+          </li>
+          <li class="breadcrumb-item">
+            <span class="breadcrumb-current" data-i18n="breadcrumbImageGenerator">AI图片生成器</span>
+          </li>
+        </ol>
+      </nav>
+    </div>
+
     <!-- 主视觉区 -->
     <section class="hero-section">
       <div class="hero-content">
@@ -196,18 +210,6 @@
 
     <div class="container">
       <main>
-        <!-- 面包屑导航 -->
-        <nav class="breadcrumb" id="breadcrumb-nav" aria-label="面包屑导航" style="margin-top: 20px">
-          <ol class="breadcrumb-list">
-            <li class="breadcrumb-item">
-              <a href="/" class="breadcrumb-link" data-i18n="navHome">首页</a>
-            </li>
-            <li class="breadcrumb-item">
-              <span class="breadcrumb-current" data-i18n="breadcrumbImageGenerator">AI图片生成器</span>
-            </li>
-          </ol>
-        </nav>
-
         <!-- 内容创作区域 -->
         <section class="input-section" id="create" style="margin-top: 20px">
           <h2 class="section-title" data-i18n="inputTitle" style="margin-bottom: 12px">描述文本</h2>
