fix: 修复登录模态框异步加载问题
🐛 问题修复：

问题描述：
- ❌ 点击登录按钮时提示"模态框未找到: login-modal"
- ❌ 登录功能无法使用
- ❌ header.js加载完成时auth-modals.html可能还未加载

根本原因：
- showModal()函数在模态框HTML加载完成前被调用
- auth-modals.html是异步加载的，存在时序竞争
- 原showModal()函数不支持等待机制

修复内容：
- ✅ 升级showModal()函数，支持异步等待模态框加载
- ✅ 如果模态框未找到，每100ms检查一次，最多等待5秒
- ✅ 模态框加载完成后自动显示
- ✅ 统一修复所有页面：index.html, image-generator.html, voice.html, user.html, ai-guide.html, prompt-engineering.html

影响范围：
1. 所有页面的登录功能
2. 所有模态框的显示逻辑
3. 用户注册、找回密码等功能

修复效果：
- ✅ 登录按钮正常工作，即使在页面加载早期点击
- ✅ 消除"模态框未找到"错误
- ✅ 提升用户体验，无需等待页面完全加载

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,14 +26,30 @@
         };
       })();
 
-      // 全局模态框控制函数
+      // 全局模态框控制函数 - 支持异步等待模态框加载
       function showModal(modalId) {
         const modal = document.getElementById(modalId);
         if (modal) {
           modal.style.display = "block";
           console.log("显示模态框:", modalId);
         } else {
-          console.error("模态框未找到:", modalId);
+          console.warn("模态框未找到，等待加载:", modalId);
+          // 等待模态框加载完成后再显示
+          const checkInterval = setInterval(() => {
+            const modal = document.getElementById(modalId);
+            if (modal) {
+              clearInterval(checkInterval);
+              modal.style.display = "block";
+              console.log("模态框加载完成，显示:", modalId);
+            }
+          }, 100);
+          // 最多等待5秒
+          setTimeout(() => {
+            clearInterval(checkInterval);
+            if (!document.getElementById(modalId)) {
+              console.error("模态框加载超时:", modalId);
+            }
+          }, 5000);
         }
       }
 
