--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -2029,10 +2029,31 @@
         })
         .catch((error) => console.error("加载认证界面失败:", error));
 
-      // 基本功能支持
+      // 基本功能支持 - 支持异步等待模态框加载
       function showModal(modalId) {
         const modal = document.getElementById(modalId);
-        if (modal) modal.style.display = "block";
+        if (modal) {
+          modal.style.display = "block";
+          console.log("显示模态框:", modalId);
+        } else {
+          console.warn("模态框未找到，等待加载:", modalId);
+          // 等待模态框加载完成后再显示
+          const checkInterval = setInterval(() => {
+            const modal = document.getElementById(modalId);
+            if (modal) {
+              clearInterval(checkInterval);
+              modal.style.display = "block";
+              console.log("模态框加载完成，显示:", modalId);
+            }
+          }, 100);
+          // 最多等待5秒
+          setTimeout(() => {
+            clearInterval(checkInterval);
+            if (!document.getElementById(modalId)) {
+              console.error("模态框加载超时:", modalId);
+            }
+          }, 5000);
+        }
       }
       function closeModal(modalId) {
         const modal = document.getElementById(modalId);
