--- a/frontend/blog_tutorial.html
+++ b/frontend/blog_tutorial.html
@@ -179,5 +179,58 @@
         </footer>
       </article>
     </main>
+
+    <footer id="contact">
+      <div class="footer-grid">
+        <div class="footer-left" data-i18n="footerCopyrightFull">
+          © 2025 AISTONE · All rights reserved · aistone.org
+        </div>
+        <div class="footer-center">
+          <a href="#" class="footer-icon" aria-label="Twitter"
+            ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
+              <path
+                fill="#00CFFF"
+                d="M22.46 5.924c-.793.352-1.646.59-2.54.698a4.48 4.48 0 0 0 1.963-2.47 8.94 8.94 0 0 1-2.828 1.08A4.48 4.48 0 0 0 11.1 9.03a12.72 12.72 0 0 1-9.23-4.68s-2.28 4.02 2.7 6.18c-.73.02-1.42-.22-2.02-.56 0 2.28 1.62 4.18 4.02 4.62-.39.11-.8.17-1.22.17-.3 0-.58-.03-.86-.08.58 1.81 2.27 3.13 4.27 3.17A9.01 9.01 0 0 1 2 19.54c6.29 4.03 13.72 1.13 15.86-5.13.32-.8.6-1.6.82-2.44.56-.41 1.05-.92 1.44-1.5z"
+              /></svg
+          ></a>
+          <a href="#" class="footer-icon" aria-label="LinkedIn"
+            ><svg width="28" height="28" fill="none" viewBox="0 0 24 24">
+              <path
+                fill="#00CFFF"
+                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zM6.12 20.452H2.566V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+              /></svg
+          ></a>
+        </div>
+        <div class="footer-right">
+          <div class="footer-links">
+            <a href="privacy.html" data-i18n="privacyPolicy">Privacy Policy</a>
+            <a href="terms.html" data-i18n="termsOfService">Terms of Service</a>
+            <a href="contact.html" data-i18n="contactUs">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "AISTONE Platform Tutorial",
+        "description": "Comprehensive tutorial covering quick start, image generation parameters, voice synthesis, and troubleshooting on AISTONE.",
+        "url": "https://aistone.org/blog_tutorial.html",
+        "image": "https://aistone.org/assets/logo.svg",
+        "author": { "@type": "Organization", "name": "AISTONE" },
+        "publisher": {
+          "@type": "Organization",
+          "name": "AISTONE",
+          "logo": { "@type": "ImageObject", "url": "https://aistone.org/assets/logo.svg" }
+        },
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://aistone.org/blog_tutorial.html"
+        }
+      }
+    </script>
+    <script src="js/i18n.js"></script>
   </body>
 </html>
